apps/staging/home-blog/private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-blog-private
spec:
  defaultBackend:
    service:
      name: home-blog-private
      port:
        number: 4000
  ingressClassName: tailscale
  tls:
    - hosts:
        - blog
